--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,7 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./out/
         server-dir: /public_html/gencho.site/
+        dangerous-clean-slate: true
         exclude: |
           **/.git*
           **/.git*/**
