--- a/public/.htaccess
+++ b/public/.htaccess
@@ -57,7 +57,7 @@ RewriteRule ^(.*)$ $1/ [L,R=301]
 # キャッシュ設定
 <IfModule mod_expires.c>
     ExpiresActive On
-    ExpiresByType text/html "access plus 1 hour"
+    ExpiresByType text/html "access plus 0 seconds"
     ExpiresByType text/css "access plus 1 month"
     ExpiresByType application/javascript "access plus 1 month"
     ExpiresByType image/png "access plus 1 month"
@@ -65,4 +65,13 @@ RewriteRule ^(.*)$ $1/ [L,R=301]
     ExpiresByType image/jpeg "access plus 1 month"
     ExpiresByType image/gif "access plus 1 month"
     ExpiresByType image/svg+xml "access plus 1 month"
+</IfModule>
+
+# HTMLキャッシュ無効化ヘッダー
+<IfModule mod_headers.c>
+    <FilesMatch "\.(html)$">
+        Header set Cache-Control "no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires 0
+    </FilesMatch>
 </IfModule>
